# ibenthos-geotagging-tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_x86.ps1  build_x86.zsh  logo.icns  main.spec  msi_build.iss  pyproject.toml  windows_setup_builder.iss
docs/: INDEX.md
ibenthos_pt_ifdo_gui/: main.py  main.qml
ibenthos_pt_ifdo_gui/Components/: ConfigDateTime.qml  ConfigTextBox.qml
src/: controller.py  feedback_model.py  ifdo.py  imagekmlgen.py  main.py  main.qml  timezones.py  user_input_model.py
src/Components/: ConfigMultilineTextBox.qml
src/models/: __init__.py  config_model.py  feedback_model.py  user_input_model.py
src/views/: __init__.py  application.py  components.py
tests/: test_user_input_model.py
tests/dataset/: test.gpx
