[tool.poetry]
name = "ibenthos-pt-ifdo-gui"
version = "0.99.0"
description = ""
authors = ["Brendan Do <brendan.do@csiro.au>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
geotag-pt = {git = "ssh://git@bitbucket.csiro.au:7999/visage/geotag_pt.git", rev = "main"}
pyexiftool = "^0.5.6"
pyyaml = "^6.0.2"
pyinstaller = "^6.13.0"
pyside6 = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
