[project]
name = "ibenthos-geotagging-tool"
version = "1.0.0"
description = ""
authors = [
    {name = "Brendan Do", email = "brendan.do@csiro.au"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "geotag-pt @ git+ssh://git@github.com/csiro/ibenthos-geotag_pt.git@main",
    "pyexiftool>=0.5.6",
    "pyyaml>=6.0.2",
    "pyside6>=6.9.0",
    "simplekml>=1.3.6",
    "pillow>=11.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pyinstaller>=6.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
